move from codepen and clear template

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,10 +6,5 @@ html(lang='en')
     title Webpack Template
   body
     .wrapper
-      h1 Webpack
-    div
-      h1 Section2!
-      img(src='/assets/images/1.jpg', alt='')
-    div
-      h1 Section2!
-      img(src='/assets/images/1.jpg', alt='')
+      button.start Start
+      button.stop
