--- a/src/styles/scss/blocks/intro.scss
+++ b/src/styles/scss/blocks/intro.scss
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-}
-
 .wrapper {
     display: flex;
     justify-content: center;
@@ -22,7 +18,6 @@ body {
     margin: 0;
     border: none;
     border-radius: $borderRadius;
-    cursor: pointer;
     outline: none;
     transition: .5s;
 
@@ -54,6 +49,7 @@ body {
     height: 100%;
     object-fit: cover;
     background-repeat: no-repeat;
+    background-size: contain;
     animation: born $animationDuration ease;
 }
 
